<resources>
    <string name="app_name">FindMe</string>
    <string name="weather_api_city_list">城市列表</string>
    <string name="province_city_weather">河南省郑州市天气</string>
    <string name="weather_type">天气类型</string>
    <string name="api_result">接口数据</string>
    <string name="ensure">确定</string>
    <string name="test_api">测试接口</string>
    <string name="loading_dialog_description">加载图片与动画</string>
    <string name="weather_info">天气信息</string>
    <string name="init_city_list">初始化城市列表</string>
    <string name="kindly_reminder">温馨提示</string>
    <string name="need_pick_city">您需要先选取城市</string>
    <string name="pick_city">选取城市</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">县</string>
    <string name="change">切换</string>
    <string name="wash_index">晾洗指数</string>
    <string name="dressing_index">穿衣指南</string>
    <string name="exercise_index">运动指数</string>
    <string name="cold_index">感冒系数</string>
    <string name="daytime">白天</string>
    <string name="night">夜间</string>
    <string name="future_weather">未来天气</string>
    <string name="city_data_null">没有获取到您所在的城市，请返回上个页面选择</string>
    <string name="main_pollute_point">主要污染物</string>
    <string name="pollute_unit">单位:μg/m³</string>
    <string name="quality_hour_data">24小时</string>
    <string name="quality_date_data">日期排列</string>
    <string name="cook_book">做菜</string>
    <string name="cook_method">步骤</string>
    <string name="ingredients_str">配料</string>
    <string name="summary_str">佳肴</string>
</resources>
