<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="com.shichen.mobapisample.bean.SupportCity.ResultBean" />

        <import type="com.shichen.mobapisample.bean.SupportCity.ResultBean.CityBean" />

        <import type="com.shichen.mobapisample.bean.SupportCity.ResultBean.CityBean.DistrictBean" />

        <import type="java.util.List" />

        <variable
            name="provinceList"
            type="List&lt;ResultBean&gt;" />

        <variable
            name="cityList"
            type="List&lt;CityBean&gt;" />

        <variable
            name="districtList"
            type="List&lt;DistrictBean&gt;" />

        <variable
            name="handler"
            type="com.shichen.mobapisample.PickTargetCityActivity.PickTargetCityHandler" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/pick_city" />
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/normal_top_blank_block"
                android:paddingTop="@dimen/normal_top_blank_block"
                android:text="@string/province"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normalTextSize" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/normal_top_blank_block"
                android:paddingTop="@dimen/normal_top_blank_block"
                android:text="@string/city"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normalTextSize" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingBottom="@dimen/normal_top_blank_block"
                android:paddingTop="@dimen/normal_top_blank_block"
                android:text="@string/district"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/normalTextSize" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:handler="@{handler}"
                app:provinceList="@{provinceList}" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:cityList="@{cityList}"
                app:handler="@{handler}" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:districtList="@{districtList}"
                app:handler="@{handler}" />
        </LinearLayout>
    </LinearLayout>
</layout>