<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="weatherBean"
            type="com.shichen.mobapisample.bean.WeatherInfo.WeatherBean" />

        <variable
            name="handler"
            type="com.shichen.mobapisample.weatherpart.WeatherInfoActivity.Handler" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_top_blank_block">

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{weatherBean.weather}"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/normalTextSize" />

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_weather"
            android:text="@{weatherBean.temperature}"
            android:textColor="@color/colorWhite"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="@{handler.pickCity}"
            android:text="@{weatherBean.city}"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/normalTextSize" />

        <LinearLayout
            android:id="@+id/ll_weather_index"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_temperature"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_airCondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{handler.airConditionClick}"
                android:text="@{weatherBean.airCondition}"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/normalTextSize"
                android:transitionName="tv_air_condition_" />

            <View
                android:id="@+id/v_slide_airCondition"
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{weatherBean.wind}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/normalTextSize" />

            <View
                android:id="@+id/v_slide_wind"
                android:layout_width="1dp"
                android:layout_height="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{weatherBean.humidity}"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/normalTextSize" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_suggest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_weather_index"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_weather_washIndex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wash_index"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{weatherBean.washIndex}"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/normalTextSize" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/ll_weather_dressingIndex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dressing_index"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{weatherBean.dressingIndex}"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/normalTextSize" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/ll_weather_exerciseIndex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/exercise_index"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{weatherBean.exerciseIndex}"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/normalTextSize" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:background="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/ll_weather_coldIndex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cold_index"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{weatherBean.coldIndex}"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/normalTextSize" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_suggest"
            android:padding="5dp"
            android:text="@string/future_weather"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>
</layout>